--- a/aula08/estilo.css
+++ b/aula08/estilo.css
@@ -6,9 +6,9 @@
 
 /* Aqui você irá adicionar as media queries para tornar a página responsiva complete as lacunas*/
 /* Para telas menores que 768px */
-@media (max-width: 768) {
+@media (max-width: 768px) {
     body {
-        background-color: blueviolet; 
+        background-color: #E6FFE6
     }
 
     main {
@@ -16,7 +16,7 @@
     }
 
     header {
-        background-color: blueviolet; 
+        background-color: #093; 
         color: white;
         padding: 20px;
         text-align: center;
@@ -43,7 +43,7 @@
     }
 
     img {
-        display: ___________;
+        display: none;
     }
 
     div{
@@ -52,7 +52,7 @@
 
     footer {
         
-        background-color:blueviolet;
+        background-color:#CCFFCC;
         color: white;
         padding: 20px;/*espaçamento interno*/
         text-align: center;/*alinhamento de texto*/
@@ -60,7 +60,7 @@
 }
 
 /* Para telas com tamanho mínimo de 768px ou maiores (desktop) */
-@media (min-widtc: 768) {
+@media (min-widtc: 768px) {
     body {
         background-color: white;
     }
@@ -110,7 +110,7 @@
     }
 
    /* estilização apenas para os parágrafos "filhos" de divs*/
-    ___ ___{
+    div p{
         text-align: left;
     }
 
