--- a/projeto_loja/styleLoja.css
+++ b/projeto_loja/styleLoja.css
@@ -1,28 +1,25 @@
-* {
-    margin: 0;
-    pudding: 0;
-}
-
 html {
     width: 100vw;
-    height: 100vh;
+    /*height: 100vh*/;
     font-size: 62.5%;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
+
 body {
-    background: linear-gradient(rgb(16,16,16,0.5), rgb(25,25,25,0.5)), url(imagens/pexels-photo-4489704.jpeg);
+    background: linear-gradient(rgba(201, 67, 218, 0.5), rgba(167, 112, 157, 0.5)), url(/assets/conjunto_de_moveis_para_montar_loja_de_roupas_6266253_2_ebbae598bee3b5dd84588f3c7bebb0c9.webp);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position-y: 0%;
+    background-position-y: 52%;
+    
 }
 
 header {
     width: 100%;
     height: 7vw;
-    background: rgb(187, 154, 5);
+    background: rgb(236, 88, 228);
     
 }
 
@@ -69,13 +66,13 @@ header {
  }
  .menu .lista-menu a:hover:before{
     width: 100%;
-    background-color: yellow;
+    background-color: rgb(0, 13, 255);
  }
 
 main{
-    height: 80vh;
+    height: 150vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     gap: 20px;
@@ -87,28 +84,36 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: rgb(211, 190, 190);
+    color: rgb(3, 3, 116);
+    h1{
+        font-size: 50px;
+    }
+    h2{
+        font-size: 30px;
+    }
 }
 
 .conteinerCards{
-    width: 950px;
+    width: 1150px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    margin-bottom: 200px;
 
 }
 
 
 .subConteiner{
     width: 300px;
-    height: 350px;
-    background-color: white;
+    height: 700px;
+    background-color: rgb(187, 132, 239);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    margin: 5px;
 }
 
 img {
@@ -121,21 +126,26 @@ img {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-size: 23px;
+    color: white;
 }
 
 button{ 
-    background-color: yellow;
+    background-color: blueviolet;
     border-radius: 10px;
     color: rgb(160, 160, 160);
 }
 
 
+
 footer{
-    background-color: rgb(28, 24, 24);
+    background-color: rgb(26, 2, 41);
     color: white;
     padding: 20px 0;
     font-size: 15px;
+
 }
+
 .footer-conteiner{
     display: flex;
     justify-content: space-between;
@@ -144,6 +154,9 @@ footer{
     margin: 0 auto;
     margin-bottom: 0;
     padding: 20px;
+    h1{
+    font-size: 45px;
+}
 }
 .footer-form, .footer-conteiner{
     flex: 1;
@@ -153,9 +166,13 @@ footer{
     margin-bottom: 10px;
 }
 .footer-form form{
-    width: 50%;
+    width: 100%;
+    height: 45px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    margin-top: 46px;
+    font-size: 25px;
+    
 }
 .footer-form label{
     margin-bottom: 5px;
@@ -167,12 +184,13 @@ footer{
 }
 .footer-form button{
     padding: 10px;
-    width: 20%;
+    width: 12%;
+    height: 35px;
     font-size: 1.6rem;
-    background-color: yellow;
+    background-color: rgb(84, 6, 126);
     border: none;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 0px;
     
 }
 
